[package]
name = "agq"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["AGX Core Team"]
description = "AGQ - Queue Manager for the AGX Agentic Ecosystem"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
ring = "0.17"
subtle = "2.5"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
redb = "2.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
jsonschema = "0.18"
once_cell = "1.19"
governor = "0.6"

[dev-dependencies]
proptest = "1.4.0"
tempfile = "3.8"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[profile.dev]
overflow-checks = true
